--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "set PORT=3000 && node server.js"
+    "dev": "set PORT=3000 && node server.js",
+    "build": "node build.js"
   },
   "dependencies": {
     "express": "^4.18.2",
